--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,8 +1,9 @@
 .content {
   height: 70px;
-  background-color: #888888;
+  background-color: #424242;
 }
 
 .logo {
-  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
 }
