--- a/src/components/Header/Search/search.module.scss
+++ b/src/components/Header/Search/search.module.scss
@@ -1,15 +1,25 @@
 .search {
   border: none;
+  outline: none;
   height: 57px;
   width: 713px;
   opacity: 0.7;
+  color: #fff;
   border-radius: 4px;
   background-color: rgba(50, 50, 50, 0.8);
-  box-shadow: 0 4px 0 0 rgba(246, 82, 97, 0.65);
+  font-size: 20px;
+  padding-left: 20px;
+  font-family: Montserrat;
+}
+
+.form {
+  display: flex;
+  justify-content: space-between;
 }
 
 .button {
   border: none;
+  outline: none;
   height: 57px;
   width: 233px;
   border-radius: 4px;
@@ -17,7 +27,17 @@
   color: #FFFFFF;
   font-family: Montserrat;
   font-size: 20px;
+  font-weight: 900px;
   text-transform: uppercase;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #dd4957;
+  }
+
+  &:active {
+    background-color: #c4414d;
+  }
 }
 
 .title {
