--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,10 +1,15 @@
-.content {
+.header {
   height: 396px;
-  background-color: #232323;
   padding: 20px 60px;
+  background: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) ), url(../../../assets/site/background.jpg);
+  // filter: blur(3px);
+}
+
+.content {
+  filter: none;
 }
 
 .body {
-  width: 800px;
+  max-width: 1000px;
   margin: 100px auto;
 }
