--- a/src/components/Header/Search/search.module.scss
+++ b/src/components/Header/Search/search.module.scss
@@ -9,7 +9,7 @@
   background-color: rgba(50, 50, 50, 0.8);
   font-size: 20px;
   padding-left: 20px;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
 }
 
 .form {
@@ -25,9 +25,9 @@
   border-radius: 4px;
   background-color: #F65261;
   color: #FFFFFF;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 20px;
-  font-weight: 900px;
+  font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
 
@@ -44,7 +44,7 @@
   height: 49px;
   width: 393px;
   color: #FFFFFF;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 40px;
   font-weight: 300;
   letter-spacing: 1px;
