T6 - film by id view

--- a/src/components/FilmList/FilmCard/filmcard.module.scss
+++ b/src/components/FilmList/FilmCard/filmcard.module.scss
@@ -2,9 +2,9 @@
   padding: 0 20px;
   width: 324px;
   height: 540px;
-  font-family: Montserrat;
+  font-family: Montserrat, serif;
   color: #fff;
-  cursor: pointer;
+  text-decoration: none;
 }
 
 .cover {
